--- a/index.html
+++ b/index.html
@@ -4,19 +4,39 @@
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Tea Timer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tea Timer</title>
   <meta name="author" content="Josh Braun, Alice Uhl">
   <meta name="description" content="Tea Timer">
   <meta name="keywords" content="tea,timer,deliciousness">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <!-- stylesheets -->
-  <link rel="stylesheet" href="css/main.css" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <!-- TODO: Add manifest.json -->
+
+  <!-- TODO: Add favicons, home screen icons for Safari, iOS, tile icons for Windows -->
+
+
   </head>
   <body>
-  
+  <header>
+    <button id="buttonAdd" class="headerButton" aria-label="Add Tea"></button>
+    <button id="buttonColors" class="headerButton" aria-label="Toggle Colors"></button>
+    <button id="buttonSound" class="headerButton" aria-label="Toggle Sound"></button>
+  </header>
 
+  <main class="main">
+    
+
+
+
+
+    
+  </main>
 
 
   <!-- scripts -->
